Widget preset image height stretch issue fixed

--- a/assets/scss/ezd-docs-widgets.scss
+++ b/assets/scss/ezd-docs-widgets.scss
@@ -267,6 +267,8 @@ ol.eazydocs-search-wrapper .breadcrumb .breadcrumb-item:first-child {
 	img {
 		padding-right: 15px;
 		max-width: 40px;
+		height: auto;
+		max-height: 40px;
 	}
 
 	.topic-title {
